--- a/tex/seq64_build.tex
+++ b/tex/seq64_build.tex
@@ -202,7 +202,7 @@
         one specifies \texttt{--lash} on the \texttt{sequencer64} command-line or
         turn on the new \texttt{[lash-session]} option in the "rc"
         configuration file,
-        \texttt{~/.config/sequencer64/sequencer64.rc}.
+        \texttt{\textasciitilde/.config/sequencer64/sequencer64.rc}.
 
     \itempar{\texttt{--disable-jack}}{build!disable jack}
         \index{SEQ64\_JACK\_SUPPORT}
@@ -211,7 +211,7 @@
         however, \textsl{Sequencer64} will still not use JACK support unless
         one specifies the various JACK options on the \texttt{sequencer64}
         command-line or turn them on in the "rc" configuration file,
-        \texttt{~/.config/sequencer64/sequencer64.rc}.
+        \texttt{\textasciitilde/.config/sequencer64/sequencer64.rc}.
 
     \itempar{\texttt{--disable-jack-session}}{build!disable jack session}
         \index{SEQ64\_JACK\_SESSION}
