--- a/tex/seq64_manpage.tex
+++ b/tex/seq64_manpage.tex
@@ -71,11 +71,12 @@
       Save the MIDI file in the old Seq24 format, as unspecified
       binary data, instead of as a legal MIDI track with meta events.
       Also read the configuration, if provided, from the "legacy"
-      \texttt{~/.seq24rc} and \texttt{~/.seq24usr} files.
+      \texttt{\textasciitilde/.seq24rc} and
+      \texttt{\textasciitilde/.seq24usr} files.
 
 %     instead of the new
-%     \texttt{~/.config/sequencer64/sequencer64.rc} and
-%     \texttt{~/.config/sequencer64/sequencer64.usr} files.
+%     \texttt{\textasciitilde/.config/sequencer64/sequencer64.rc} and
+%     \texttt{\textasciitilde/.config/sequencer64/sequencer64.usr} files.
 
       The user-interface will indicate this mode with a small text
       note.
@@ -322,9 +323,11 @@
    It is released under the GNU GPL license.
    Sequencer64 is also released under the GNU GPL license.
 
-   \textsl{Sequencer64} was written by Chris Ahlstrom <ahlstromcj@gmail.com>
+   \textsl{Sequencer64} was written by Chris Ahlstrom
+   \href{mailto:ahlstromcj@gmail.com}{ahlstromcj@gmail.com}
    (with a fair amount of help).
-   \textsl{Seq24} was written by Rob C. Buse \url{mailto:seq24@filter24.org}
+   \textsl{Seq24} was written by Rob C. Buse
+   \href{mailto:seq24@filter24.org}{seq24@filter24.org}
    and the \textsl{Sequencer64} team.
 
    This manual page was written by Dana Olson
@@ -333,7 +336,7 @@
    \url{mailto:ahlstromcj@gmail.com}.
 
    \begin{verbatim}
-Version 0.9.9.6                 November 4 2015                  sequencer64(1)
+Version 0.94.0                  November 4 2015                  sequencer64(1)
    \end{verbatim}
 
 %-------------------------------------------------------------------------------
