--- a/tex/seq64_midi_formats.tex
+++ b/tex/seq64_midi_formats.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-09-03
-% \update      2016-05-15
+% \update      2017-12-17
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -782,7 +782,7 @@ These are:
       FF 7F len data
    \end{verbatim}
 
-   In \textsl{Seq24</i> and <i>Sequencer64},
+   In \textsl{Seq24 and Sequencer64},
    the data portion starts with four bytes
    that indicate the kind of data for a particular SeqSpec event:
 
