--- a/tex/seq64_rc_file.tex
+++ b/tex/seq64_rc_file.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2017-11-26
+% \update      2017-12-10
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -1200,6 +1200,8 @@
 
       /home/ahlstrom/Home/ca/mls/git/sequencer64/contrib/midi/
    \end{verbatim}
+
+   The following item preserves a list of the last few MIDI files loaded.
 
    \index{[recent-files]}
    \begin{verbatim}
