--- a/tex/seq64_references.tex
+++ b/tex/seq64_references.tex
@@ -24,229 +24,229 @@
 \begin{thebibliography}{99}
 
    \bibitem{alsa}
-   ALSA team
-   \emph{Advanced Linux Sound Architecture (ALSA) project homepage}
-   \url{http://www.alsa-project.org/}
+   ALSA team.
+   \emph{Advanced Linux Sound Architecture (ALSA) project homepage.}
+   \url{http://www.alsa-project.org/}.
    ALSA tools through version 1.0.29.
-   2015
+   2015.
 
    \bibitem{amsynth}
-   amSynth team, Nick Dowell
+   amSynth team, Nick Dowell.
    \emph{amSynth and Demos with Calf Effects.}
-   \url{http://amsynth.com/amsynth.html}
+   \url{http://amsynth.com/amsynth.html}.
    Includes links to demos and the source code.
    2015.
 
    \bibitem{bristol}
-   Bristol team Nick Copeland
-   \emph{Bristol: A Vintage Synthesizer Emulator}
-   \url{http://www.linuxsynths.com/BristolPatchesDemos/bristol.html}
+   Bristol team, Nick Copeland.
+   \emph{Bristol: A Vintage Synthesizer Emulator.}
+   \url{http://www.linuxsynths.com/BristolPatchesDemos/bristol.html}.
    2014.
 
    \bibitem{fluidsynth}
-   FluidSynth team
-   \emph{FluidSynth: A SoundFont Synthesizer}
-   \url{http://www.fluidsynth.org/}
+   FluidSynth team.
+   \emph{FluidSynth: A SoundFont Synthesizer.}
+   \url{http://www.fluidsynth.org/}.
    2014.
 
    \bibitem{combine}
-   Jay Capela Music
-   \emph{"Combine": A Seq24 Demonstration}
-   \url{https://www.youtube.com/watch?v=fUiXbVT0bJQ}
+   Jay Capela Music.
+   \emph{"Combine": A Seq24 Demonstration.}
+   \url{https://www.youtube.com/watch?v=fUiXbVT0bJQ}.
    2010.
 
    \bibitem{jack}
-   JACK team
-   \emph{JACK Audio Connection Kit}
-   \url{http://jackaudio.org/}
+   JACK team.
+   \emph{JACK Audio Connection Kit.}
+   \url{http://jackaudio.org/}.
    2015.
 
    \bibitem{linuxsynths}
-   LinuxSynths team, briandc@linuxsynths.com
+   LinuxSynths team, briandc@linuxsynths.com.
    \emph{A Sonic Palette on the Linux Platform.}
-   \url{http://www.linuxsynths.com/}
+   \url{http://www.linuxsynths.com/}.
    2015.
 
    \bibitem{ljtutorial}
-   Dave Phillips
+   Dave Phillips.
    \emph{At the Sounding Edge: Introducing seq24.}
-   \url{http://www.linuxjournal.com/article/8304}
+   \url{http://www.linuxjournal.com/article/8304}.
    Linux Journal, May 12, 2005.
 
    \bibitem{midicvt}
-   Chris Ahlstrom
+   Chris Ahlstrom.
    \emph{Extension of midicomp/midi2text to convert between MIDI and ASCII
       text format.}
-   \url{https://github.com/ahlstromcj/midicvt}
+   \url{https://github.com/ahlstromcj/midicvt}.
    2015-2016.
 
    \bibitem{midicontrol}
-   linuxaudio.org
-   \emph{seq24: toggle sequences with a MIDI controller}
-   \url{http://wiki.linuxaudio.org/wiki/seq24togglemiditutorial}
+   linuxaudio.org.
+   \emph{seq24: toggle sequences with a MIDI controller.}
+   \url{http://wiki.linuxaudio.org/wiki/seq24togglemiditutorial}.
    2013.
 
    \bibitem{midicontroltable}
-   midi.org
-   \emph{Summary of MIDI Messages}
-   \url{https://www.midi.org/specifications/item/table-1-summary-of-midi-message#2}
+   midi.org.
+   \emph{Summary of MIDI Messages.}
+   \url{https://www.midi.org/specifications/item/table-1-summary-of-midi-message#2}.
    Year unknown.
 
    \bibitem{nanobasket}
-   Roy Vegard
-   \emph{Configurator software for the Korg nanoSERIES of MIDI controllers}
-   \url{https://github.com/royvegard/Nano-Basket}
+   Roy Vegard.
+   \emph{Configurator software for the Korg nanoSERIES of MIDI controllers.}
+   \url{https://github.com/royvegard/Nano-Basket}.
    2015.
 
    \bibitem{portmidi}
-   PortMedia team
-   \emph{Platform Independent Library for MIDI I/O}
-   \url{http://portmedia.sourceforge.net/portmidi/}
+   PortMedia team.
+   \emph{Platform Independent Library for MIDI I/O.}
+   \url{http://portmedia.sourceforge.net/portmidi/}.
    2010.
 
    \bibitem{rtmidi}
-   Gary P. Scavone
-   \emph{The RtMIDI Tutorial}
-   \url{https://www.music.mcgill.ca/~gary/rtmidi/}
+   Gary P. Scavone.
+   \emph{The RtMIDI Tutorial.}
+   \url{https://www.music.mcgill.ca/~gary/rtmidi/}.
    2016.
 
    \bibitem{seq24}
    Seq24 Team.
    \emph{The home site for the Sequencer64 looping sequencer.}
-   \url{http://www.filter24.org/seq24/download.html}
+   \url{http://www.filter24.org/seq24/download.html}.
    2010.
 
    \bibitem{seq24demo1}
    pneumanlsd.
-   \emph{Linux audio demo: Live sequencing with seq24}
-   \url{https://www.youtube.com/watch?v=f8zLV0vlSpY}
+   \emph{Linux audio demo: Live sequencing with seq24.}
+   \url{https://www.youtube.com/watch?v=f8zLV0vlSpY}.
    2010.
 
    \bibitem{seq24demo2}
    synthWF.
-   \emph{Misty Corridor - Seq24 (with QSynth)}
-   \url{https://www.youtube.com/watch?v=RH99zHvffGQ}
+   \emph{Misty Corridor - Seq24 (with QSynth).}
+   \url{https://www.youtube.com/watch?v=RH99zHvffGQ}.
    2012.
 
    \bibitem{seq24part1}
    pneumanlsd.
-   \emph{Linux music tutorial: seq24, part 1}
-   \url{https://www.youtube.com/watch?v=J2WDHS1wYeM}
+   \emph{Linux music tutorial: seq24, part 1.}
+   \url{https://www.youtube.com/watch?v=J2WDHS1wYeM}.
    2010.
    
    \bibitem{seq24part2}
    pneumanlsd.
-   \emph{Linux music tutorial: seq24, part 2}
-   \url{https://www.youtube.com/watch?v=i3Vpi3oxdqk}
+   \emph{Linux music tutorial: seq24, part 2.}
+   \url{https://www.youtube.com/watch?v=i3Vpi3oxdqk}.
    2010.
 
    \bibitem{seq24launchpad}
    Seq24 Team.
    \emph{The home site for the Sequencer64 looping sequencer.}
-   \url{https://launchpad.net/seq24}
+   \url{https://launchpad.net/seq24}.
    2016.
 
    \bibitem{seq24launchpadmapper}
    Excds.
    \emph{A simple mapping for toggling the LEDs on the Novation launchpad
-   together with seq24}
-   \url{https://github.com/Excds/seq24-launchpad-mapper}
+   together with seq24.}
+   \url{https://github.com/Excds/seq24-launchpad-mapper}.
    2013.
 
    \bibitem{seq32}
    Stan Preston (stazed).
    \emph{The home site for the Seq32 looping sequencer.}
-   \url{https://github.com/Stazed/seq32}
+   \url{https://github.com/Stazed/seq32}.
    2016.
 
    \bibitem{seq42}
    sbrauer.
    \emph{The home site for the original Seq42 looping sequencer.}
-   \url{https://github.com/sbrauer/seq42}
+   \url{https://github.com/sbrauer/seq42}.
    2016.
 
    \bibitem{seq42fork}
    Stan Preston (stazed).
    \emph{A fork of the Seq42 looping sequencer.}
-   \url{https://github.com/Stazed/seq42}
+   \url{https://github.com/Stazed/seq42}.
    2016.
 
    \bibitem{sequencer64}
    Chris Ahlstrom.
    \emph{A reboot of the Seq24 project as "Sequencer64".}
-   \url{https://github.com/ahlstromcj/sequencer64/}
+   \url{https://github.com/ahlstromcj/sequencer64/}.
    2015-2017.
 
    \bibitem{sequencer64doc}
    Chris Ahlstrom.
    \emph{The Sequencer64 User Manual.}
-   \url{https://github.com/ahlstromcj/sequencer64-doc/}
+   \url{https://github.com/ahlstromcj/sequencer64-doc/}.
    2015-2017.
 
    \bibitem{sequencer64packages}
    Chris Ahlstrom.
    \emph{Sequencer64 Debian Packages.}
-   \url{https://github.com/ahlstromcj/sequencer64-packages/}
+   \url{https://github.com/ahlstromcj/sequencer64-packages/}.
    2017.
 
    \bibitem{subatomicglue}
-   Kevin at subatomicglue.com
-   \emph{Subatomic Mods for Seq24 Win32}
-   \url{http://www.subatomicglue.com/seq24/}
+   Kevin at subatomicglue.com.
+   \emph{Subatomic Mods for Seq24 Win32.}
+   \url{http://www.subatomicglue.com/seq24/}.
    2010.
 
    \bibitem{timidity}
    Timidity++ Team.
    \emph{Download site for Timidity++ source code.}
-   \url{http://sourceforge.net/projects/timidity/}
+   \url{http://sourceforge.net/projects/timidity/}.
    2015.
 
    \bibitem{vmpk}
    VMPK Team.
-   \emph{Virtual MIDI Piano Keyboard}
-   \url{http://vmpk.sourceforge.net/}
+   \emph{Virtual MIDI Piano Keyboard.}
+   \url{http://vmpk.sourceforge.net/}.
    2015.
 
    \bibitem{wootangent1}
    The Wootangent man.
    \emph{Sequencer64 Tutorial Video, Part 1.}
-   \url{http://wootangent.net/2010/10/linux-music-tutorial-seq24-part-1/}
+   \url{http://wootangent.net/2010/10/linux-music-tutorial-seq24-part-1/}.
    2010.
 
    \bibitem{wootangent2}
    The Wootangent man.
    \emph{Sequencer64 Tutorial Video, Part 2.}
-   \url{http://wootangent.net/2010/10/linux-music-tutorial-seq24-part-2/}
+   \url{http://wootangent.net/2010/10/linux-music-tutorial-seq24-part-2/}.
    2010.
 
    \bibitem{yoshimi}
-   Yoshimi team \url{abrolag@users.sourceforge.net}
+   Yoshimi team \url{abrolag@users.sourceforge.net}.
    \emph{The download site for the Yoshimi software synthesizer.}
-   \url{http://yoshimi.sourceforge.net/}
+   \url{http://yoshimi.sourceforge.net/}.
    2015.
 
    \bibitem{yoshimi2}
-   Yoshimi team
+   Yoshimi team.
    \emph{The alternate location for the Yoshimi source-code.}
-   \url{https://github.com/abrolag/yoshimi/}
+   \url{https://github.com/abrolag/yoshimi/}.
    2015.
 
    \bibitem{yoshimidoc}
-   Chris Ahlstrom
+   Chris Ahlstrom.
    \emph{A Yoshimi User Manual.}
-   \url{https://github.com/ahlstromcj/yoshimi-doc/}
-   2015.
+   \url{https://github.com/ahlstromcj/yoshimi-doc/}.
+   2015-2017.
 
    \bibitem{yoshimicook}
-   Chris Ahlstrom
+   Chris Ahlstrom.
    \emph{A Yoshimi Cookbook.}
-   \url{https://github.com/ahlstromcj/yoshimi-cookbook/}
+   \url{https://github.com/ahlstromcj/yoshimi-cookbook/}.
    2015.
 
    \bibitem{zynaddsubfx}
-   Mark McCurry, Paul Nasca (ZynAddSubFX team)
+   Mark McCurry, Paul Nasca (ZynAddSubFX team).
    \emph{The download site for the ZynAddSubFX software synthesizer.}
-   \url{http://zynaddsubfx.sourceforge.net/}
+   \url{http://zynaddsubfx.sourceforge.net/}.
    2015.
 
 \end{thebibliography}
